# esp-bttf-clock-rs

./: .gitignore  Cargo.toml  README.md  justfile  sdkconfig.defaults
.cargo/: config.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
src/: display.rs  error.rs  handler.rs  main.rs
src/error/: mod.rs
src/module/: display.rs  led.rs  led_strip.rs  mod.rs
src/nvs/: mod.rs  prefs.rs  tz.rs  wifi.rs
src/prefs/: hour_format.rs  mod.rs
src/server/: captive_portal.rs  dns_responder.rs  mod.rs  web_portal.rs
src/service/: app_storage.rs  display.rs  led.rs  led_strip.rs  mod.rs
src/services/: led.rs  mod.rs
src/theme/: mod.rs
src/time/: mod.rs  sntp.rs  tz.rs
src/util/: messages.rs  mod.rs
src/view/: captive_portal.html  web_portal.html
src/wifi/: ap.rs  mod.rs  station.rs
static/css/: captive_portal.css  web_portal.css
static/html/: captive_portal.html  web_portal.html
static/js/: captive_portal.js  web_portal.js
web/captive_portal/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.ts
web/captive_portal/src/: main.ts  style.css  wifi.ts
web/web_portal/: index.html  package-lock.json  package.json
web/web_portal/src/: display.ts  main.ts  prefs.ts  status.ts  style.css  sys.ts  theme.ts  time.ts  timezones.ts
