[package]
name = "esp-bttf-clock-rs"
version = "0.1.0"
authors = ["allansomensi <allansomensidev@proton.me>"]
description = "A clock/lamp built with ESP32, using Rust and the esp-idf framework. It connects to Wi-Fi to synchronize time via SNTP."
homepage = "https://github.com/allansomensi/esp-bttf-clock-rs"
repository = "https://github.com/allansomensi/esp-bttf-clock-rs"
readme = "README.md"
keywords = ["esp32", "esp-idf", "embedded", "http-server", "wifi", "sntp"]
license = "MIT"
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp-bttf-clock-rs"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = [
    "critical-section",
    "embassy-time-driver",
    "embassy-sync",
] }
embedded-svc = { version = "0.28.1", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.39"
chrono-tz = "0.10.1"
thiserror = "2.0.12"

# Components
tm1637 = "0.1.0"
ws2812-esp32-rmt-driver = { version = "0.12.0", features = [
    "smart-leds-trait",
] }

# Utils
heapless = "0.8.0"
lazy_static = "1.5.0"
serde_json = "1.0.140"
postcard = "1.1.1"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.2" }

[build-dependencies]
embuild = "0.33"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
    "run-for-all",
    "prepush-hook",
    "precommit-hook",
    "run-cargo-clippy",
    "run-cargo-fmt",
]
